# TestTask

./: CMakeLists.txt  README.md  f.txt  main.cpp
Task_2.3/: main.cpp  readme.md
Task_2.4/: main.cpp  readme.md
Task_2.4/class/: StereoSoundGenerator.cpp  StereoSoundGenerator.h  StereoSoundGeneratorInterface.cpp  StereoSoundGeneratorInterface.h
Task_2.6/: CMakeLists.txt  Readme.md  main.cpp
Task_2.6/class/: TrackCompilerInterface.cpp  TrackCompilerInterface.h  TrackCompliler.cpp  TrackCompliler.h  WAVOutputGenerator.cpp  WAVOutputGenerator.h
Task_2.6/class/Exception/: IOException.cpp  IOException.h
class/: TrackCompilerInterface.h  TrackCompliler.cpp  TrackCompliler.h  WAVOutputGenerator.cpp  WAVOutputGenerator.h
